[package]
name = "dograph"
version = "0.10.0"
edition = "2021"
authors = ["Adam Szkoda <adaszko@gmail.com>"]
description = "Generate various classes of random graphs for use in property-based testing"
homepage = "https://github.com/adaszko/dograph"
repository = "https://github.com/adaszko/dograph"
keywords = ["dag", "graph"]
license = "GPL-3.0"


[dependencies]
fixedbitset = "0.4"
rand = "0.8.4"
rand_distr = "0.4.3"
proptest = "1"
cov-mark = "1.1"
