[package]
name = "roaring-graphs"
version = "0.10.0"
edition = "2021"
authors = ["Adam Szkoda <adaszko@gmail.com>"]
description = "Graph data structure backed by roaring bitmaps"
homepage = "https://github.com/adaszko/roaring-graphs"
repository = "https://github.com/adaszko/roaring-graphs"
keywords = ["dag", "graph", "proptest"]
license = "Apache-2.0"


[dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
proptest = "1"
cov-mark = "1.1"
roaring = "0.10"
